# simple-pong-raylib

./: CMakeLists.txt  LICENSE  README-pt.md  README.md  readme-pt.md  readme.md
src/: main.c
src/audio/: audio_manager.c  audio_manager.h
src/game/: ball.c  ball.h  game.c  game.h  paddle.c  paddle.h  particles_system.c  particles_system.h
src/utils/: constants.h  types.h
